# werewolf-multi-agent

./: .gitignore  README.md  README_EN.md  config.yaml.template  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css  types.ts
frontend/src/components/: ChatLog.vue  ConnectPanel.vue  GameBoard.vue  HumanInput.vue
frontend/src/stores/: gameStore.ts
src/werewolf/: __init__.py  config.py  game_engine.py  human_player.py  llm_client.py  models.py  prompts.py  server.py  test_api.py
