[project]
name = "werewolf"
version = "0.1.0"
description = "Multi-Agent Werewolf Game with LLM Players and Human Participation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "tenacity>=8.3.0",
]

[project.scripts]
werewolf-server = "werewolf.server:main"
werewolf-cli = "werewolf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/werewolf"]